Bug 337625 - Cannot add email address to a contact without an email adress.
Summary: Cannot add email address to a contact without an email adress.
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.13.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-20 12:14 UTC by Pascal d'Hermilly
Modified: 2014-07-25 15:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pascal d'Hermilly 2014-07-20 12:14:31 UTC
The list of contacts that you can add the email address to only contains contacts that already contains an email address.

Reproducible: Always

Steps to Reproduce:
Right click an email address in a message and select "Add to existing contact" (string freely translated)

Actual Results:  
The list only shows contacts that already has an email address. This will mostly likely not include the contact you want to add the address to.

Expected Results:  
A list of all contacts.
Comment 1 Pascal d'Hermilly 2014-07-24 15:55:35 UTC
More clearly: The dialog to add an email address to a contact only list contacts _with_ email adresses.
Comment 2 Laurent Montel 2014-07-25 06:49:30 UTC
I confirm it.
I will investigate it.
Comment 3 Laurent Montel 2014-07-25 11:40:37 UTC
Git commit c8fe669c1c3cc6b77700f7991eb808e5d7ca6c84 by Montel Laurent.
Committed on 25/07/2014 at 11:40.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 337625 - Cannot add email address to a contact without an email adress.

FIXED-IN: 4.14

M  +1    -1    CMakeLists.txt
M  +19   -7    akonadi/contact/emailaddressselectionwidget.cpp
M  +8    -0    akonadi/contact/emailaddressselectionwidget.h

http://commits.kde.org/kdepimlibs/c8fe669c1c3cc6b77700f7991eb808e5d7ca6c84
Comment 4 Laurent Montel 2014-07-25 11:41:13 UTC
Git commit 5d34ca7e4ce3b8d93744f6899ea153324d0c74c9 by Montel Laurent.
Committed on 25/07/2014 at 11:40.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 337625 - Cannot add email address to a contact without an email adress.

FIXED-IN: 4.14

M  +1    -1    CMakeLists.txt
M  +1    -1    kmail/dialog/addemailtoexistingcontactdialog.cpp

http://commits.kde.org/kdepim/5d34ca7e4ce3b8d93744f6899ea153324d0c74c9
Comment 5 Pascal d'Hermilly 2014-07-25 15:33:52 UTC
:-) w00t!