Fix Bug 337625 - Cannot add email address to a contact without an email adress.

FIXED-IN: 4.14
BUG: 337625

Conflicts:
	CMakeLists.txt