dialog/addemailtoexistingcontactdialog.cpp
@@ -57,7 +57,7 @@ AddEmailToExistingContactDialog::AddEmailToExistingContactDialog(QWidget *parent
 
     Akonadi::ContactsTreeModel *model = new Akonadi::ContactsTreeModel( changeRecorder, this );
 
-    mEmailSelectionWidget = new Akonadi::EmailAddressSelectionWidget(model, this);
+    mEmailSelectionWidget = new Akonadi::EmailAddressSelectionWidget(false, model, this);
     setMainWidget(mEmailSelectionWidget);
     mEmailSelectionWidget->view()->setSelectionMode(QAbstractItemView::SingleSelection);
     readConfig();
